Refactored to use TestConfiguration for url by env

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -25,12 +25,22 @@ local {
       port = 9056
       productionRoute = "/pay"
     }
+    one-stop-shop-returns-frontend {
+      port = 10204
+      productionRoute = "/pay-vat-on-goods-sold-to-eu/northern-ireland-returns-payments"
+    }
   }
 }
 
 qa {
   services {
-    host: ${?QA_HOST}
+    host: "www.qa.tax.service.gov.uk"
+    one-stop-shop-returns-frontend {
+      protocol = https
+      port = 443
+      productionRoute = "/pay-vat-on-goods-sold-to-eu/northern-ireland-returns-payments"
+    }
+
   }
 }
 
