Updated following test runs

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -40,12 +40,12 @@ qa {
       port = 443
       productionRoute = "/pay-vat-on-goods-sold-to-eu/northern-ireland-returns-payments"
     }
+    auth-login-stub {
+      protocol = https
+      port = 443
+      productionRoute = "/auth-login-stub"
+    }
 
   }
 }
 
-externalTest {
-  services {
-    host: ${?EXTERNAL_TEST_HOST}
-  }
-}
