VEOSS-1825 wip for exclusion dashboard scenarios

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -29,6 +29,10 @@ local {
       port = 10204
       productionRoute = "/pay-vat-on-goods-sold-to-eu/northern-ireland-returns-payments"
     }
+    one-stop-shop-exclusions-frontend {
+      port = 10196
+      productionRoute = "/pay-vat-on-goods-sold-to-eu/leave-one-stop-shop"
+    }
   }
 }
 
