VEOSS-1822 wip for rejoin

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -33,6 +33,10 @@ local {
       port = 10196
       productionRoute = "/pay-vat-on-goods-sold-to-eu/leave-one-stop-shop"
     }
+    one-stop-shop-registration-frontend {
+      port = 10200
+      productionRoute = "/pay-vat-on-goods-sold-to-eu/northern-ireland-register"
+    }
   }
 }
 
